Main page with just a little CSS

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+_<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body id="body">
+
     <div id="principal">
 
         <div id="Fotogragia">
@@ -16,15 +17,15 @@
 
         <div id="navbar">
             <span class="nav">
-                <a href="index.html"> HOME</a>
+                <a href="index.html"> HOME|</a>
             </span>
 
             <span class="nav">
-                <a href="biografia.html"> BIOGRAFIA</a>
+                <a href="biografia.html"> BIOGRAFIA|</a>
             </span>
 
             <span class="nav">
-                <a href="campanhas.html"> CAMPANHAS PUBLICITÁRIASS</a>
+                <a href="campanhas.html"> CAMPANHAS PUBLICITÁRIAS|</a>
             </span>
 
             <span class="nav">
@@ -35,7 +36,7 @@
 
         <div id="sobreanna">
             <Span class="classsobreanna">
-                Sobre Anna Bella
+                <h1>Sobre Anna Bella</h1>
             </Span>
 
             <div>
@@ -52,14 +53,4 @@
         </div>
     </div>
 </body>
-
-<footer>
-
-    <div id="rodape">
-        <div align="center">
-            Todos os Direitos Reservados
-        </div>
-    </div>
-
-</footer>
 </html>
