Learning diferent borders in CSS and developing contact page and publicit pages

--- a/campanhas.html
+++ b/campanhas.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>campanhas</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    
+<body id="body">
+
+    <div id="principal">
+
+        <div id="Fotogragia">
+            <img src="IMAGES/capa.png" alt="">
+        </div>
+
+        <div id="navbar">
+            <span class="nav">
+                <a href="index.html"> HOME |</a>
+            </span>
+
+            <span class="nav">
+                <a href="biografia.html"> BIOGRAFIA |</a>
+            </span>
+
+            <span class="nav">
+                <a href="campanhas.html"> CAMPANHAS PUBLICITÁRIAS |</a>
+            </span>
+
+            <span class="nav">
+                <a href="contato.html"> CONTATO</a>
+            </span>
+
+        </div>
+
+        <div id="sobreanna">
+            <Span class="classsobreanna">
+                <h3>CAMPANHAS PUBLICITÁRIAS</h3>
+            </Span>
+
+            <div>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, porro? Perferendis, voluptate! Et illo, quae quasi fuga odio non vitae sapiente ipsa, minima cum id quia ut. Hic, consequuntur tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempora adipisci quae et impedit! Obcaecati, reprehenderit accusantium quisquam ratione, eius tempore laborum tempora sapiente adipisci saepe voluptate modi alias nam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi distinctio nostrum recusandae magni deleniti, quasi omnis totam earum delectus! Nulla molestiae totam neque aspernatur aliquid! Ad, quae nihil. Ea, doloremque?<br><br>
+                    <img src="IMAGES/foto1.png" alt=""> <br>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, porro? Perferendis, voluptate! Et illo, quae quasi fuga odio non vitae sapiente ipsa, minima cum id quia ut. Hic, consequuntur tempore. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque illum id consequuntur iste voluptas eum! Expedita repellat quasi, natus reiciendis minima dolorem fugiat iusto nihil, ratione quod ipsum. Placeat, in.<br><br>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, porro? Perferendis, voluptate! Et illo, quae quasi fuga odio non vitae sapiente ipsa, minima cum id quia ut. Hic, consequuntur tempore. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum eos, optio voluptate dolorem corporis ipsum quod culpa voluptas est explicabo? Deserunt recusandae consectetur numquam aut illum voluptatum voluptatem saepe ut?<br><br>
+                    <img src="IMAGES/foto2.png" alt=""><br><br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum beatae, aliquid molestiae totam suscipit adipisci ut provident culpa illo blanditiis porro deserunt quia quod accusantium numquam. Fugit optio autem assumenda. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis pariatur ullam aliquam ipsam. Id corporis, culpa sed officiis nam sapiente voluptate minima qui! Debitis, expedita? Iusto cum odit itaque sequi!<br><br>
+                    <img src="IMAGES/foto3.png" alt=""> <br><br>
+                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni, debitis molestias deleniti cupiditate placeat in quaerat earum sint cumque libero fuga beatae impedit consectetur quis maiores natus tempora vitae alias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, quos. Esse illum possimus ullam totam tenetur deserunt, autem, molestiae ea dicta unde iure sapiente eos sequi nam, quas voluptates cumque. ipsum dolor, sit amet consectetur adipisicing elit. Error, porro? Perferendis, voluptate! Et illo, quae quasi fuga odio non vitae sapiente ipsa, minima cum id quia ut. Hic, consequuntur tempore.<br><br>
+                </p>
+            </div>
+            
+        </div>
+    </div>
 </body>
 </html>
