--- a/contato.html
+++ b/contato.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>contato</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    
+<body id="body">
+
+    <div id="principal">
+
+        <div id="Fotogragia">
+            <img src="IMAGES/capa.png" alt="">
+        </div>
+
+        <div id="navbar">
+            <span class="nav">
+                <a href="index.html"> HOME |</a>
+            </span>
+
+            <span class="nav">
+                <a href="biografia.html"> BIOGRAFIA |</a>
+            </span>
+
+            <span class="nav">
+                <a href="campanhas.html"> CAMPANHAS PUBLICITÁRIAS |</a>
+            </span>
+
+            <span class="nav">
+                <a href="contato.html"> CONTATO</a>
+            </span>
+
+        </div>
+
+        <div id="sobreann">
+            <Span class="classsobreanna">
+                <h3>CONTATO</h3>
+            </Span>
+
+            <div>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, porro? Perferendis, voluptate! Et illo, quae quasi fuga odio non vitae sapiente ipsa, minima cum id quia ut. Hic, consequuntur tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas tempora adipisci quae et impedit! Obcaecati, reprehenderit accusantium quisquam ratione, eius tempore laborum tempora sapiente adipisci saepe voluptate modi alias nam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi distinctio nostrum recusandae magni deleniti, quasi omnis totam earum delectus! Nulla molestiae totam neque aspernatur aliquid! Ad, quae nihil. Ea, doloremque?<br><br>
+                    <img src="IMAGES/foto1.png" alt=""> <br>
+
+                    <div class="contato">
+                        <h5>Entre em contato</h5>
+                        <div>Email: anna@gmail.com</div>
+                        <div>Fone: 55 85 983928738</div>
+                    </div>
+                </p>
+            </div>
+            
+        </div>
+    </div>
 </body>
 </html>
