--- a/contato.html
+++ b/contato.html
@@ -34,7 +34,7 @@
 
         </div>
 
-        <div id="sobreann">
+        <div id="sobreannacontato">
             <Span class="classsobreanna">
                 <h3>CONTATO</h3>
             </Span>
@@ -45,9 +45,9 @@
                     <img src="IMAGES/foto1.png" alt=""> <br>
 
                     <div class="contato">
-                        <h5>Entre em contato</h5>
+                        <h5><strong>Entre em contato:</strong></h5>
                         <div>Email: anna@gmail.com</div>
-                        <div>Fone: 55 85 983928738</div>
+                        <div>Fone: 55 85 99227-7973</div>
                     </div>
                 </p>
             </div>
