biografy, contact(more styles to this two pages)

--- a/campanhas.html
+++ b/campanhas.html
@@ -34,7 +34,7 @@
 
         </div>
 
-        <div id="sobreanna">
+        <div id="sobreannacampanhas">
             <Span class="classsobreanna">
                 <h3>CAMPANHAS PUBLICITÁRIAS</h3>
             </Span>
