--- a/contato.html
+++ b/contato.html
@@ -47,7 +47,7 @@
                     <div class="contato">
                         <h5><strong>Entre em contato:</strong></h5>
                         <div>Email: anna@gmail.com</div>
-                        <div>Fone: 55 85 99227-7973</div>
+                        <div>Contato: 55 85 99227-7973</div>
                     </div>
                 </p>
             </div>
